# linux-kernel-fuzzing

./: .gitignore  .gitmodules  LICENSE  README.md  build-kernel.sh  config.sh
IRAnalyzer/: Makefile
IRAnalyzer/src/: CMakeLists.txt
IRAnalyzer/src/lib/: CMakeLists.txt  IRAnalyzer.cpp  IRAnalyzer.h
IRDumper/: Makefile
IRDumper/src/: CMakeLists.txt
IRDumper/src/lib/: IRDumper.cpp  IRDumper.h
docker/: Dockerfile  docker-compose.yml
kernel/: build-kernel.sh
kernel/distance/: calc-distance.py  create-distance-file.py  merge-graphs.py  parse-bc.py  parse-call-graph.py
llvm/: build-llvm.sh
scripts/: build-kernel.sh  count_icall.py  coverage-summary.sh  create-all-data.sh  create-callgraph.py  create_bclist.sh  create_callgraph.py  create_pem.sh  find-memory-related-ops.py  find-path.py  find_memory_related_ops.py  get_coverage.sh  merge-data.py  patch-analyze.py  search-test-target-bugs.py  test.py
setup/: build-deeptype.sh  build-iranalyzer.sh  build-kernel.sh  build-llvm.sh  build-syzkaller.sh  create-debian-image.sh
syzkaller/: template.cfg
